2009-10-14       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Base.mod:  allow sized SYSTEM types
	  (which are really pseudonyms of pervasive type to be
	   VAR parameter compatible).  Call IsSameSizePervasiveType.
	* gm2/gm2-compiler/M2System.def:  define and export
	  IsSameSizePervasiveType.
	* gm2/gm2-compiler/M2System.mod:  implement
	  IsSameSizePervasiveType.
	* gm2/gm2.texi:  removed -fbounds and introduced -fno-nil
	  -fwholediv, -fno-wholediv, -fwholevalue, -fno-wholevalue,
	  -findex, -fno-index, -frange and -fno-range.
	* gm2/lang-options.h:  removed -fbounds and introduced options
          -fno-nil, -fwholediv, -fno-wholediv, -fwholevalue,
	  -fno-wholevalue, -findex, -fno-index, -frange and -fno-range.
	* gm2/gm2-compiler/M2Base.mod:  removed BoundsChecking and
	  DivModRemChecking.  Use RangeChecking, IndexChecking and
          WholeDivChecking instead.
	* gm2/gm2-compiler/M2Options.def:  removed BoundsChecking and
	  DivModRemChecking.  Use RangeChecking, IndexChecking and
          WholeDivChecking instead.
	* gm2/gm2/gm2-compiler/M2Options.mod:  enable the detection of
	  -fwholevalue, -fno-wholevalue, -fno-nil, -fwholediv, -fno-wholediv,
	  -findex, -fno-index, -frange, -fno-range.
	* gm2/gm2-compiler/M2Quads.mod:  replace BoundChecking with
	  WholeValueChecking.

2009-10-07       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added SysExceptions.c and SysExceptions.def
	  to the list of library modules.  Also included the appropriate
	  build rules.
	* gm2/gm2.texi:  added space.
	* gm2/el/g-mode.el:  added all ISO and PIM built-in Modula-2
	  procedures and procedure functions.
	* gm2/gm2-libs/RTExceptions.mod:  new procedure functions
	  (indexf), (range), (casef), (invalidloc), (function),
	  (wholevalue), (wholediv), (realvalue), (realdiv),
	  (complexvalue), (complexdiv), (protection), (systemf),
	  (coroutine), (exception).  Call
	  SysException.InitExceptionHandlers to init the signal
	  call backs.o